# fasm

./: .gitignore  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: check_license.sh
.github/workflows/: check-install.yml  presubmit.yml  publish-to-pypi.yml  wheel.yml
docs/: specification.md
fasm/: __init__.py  tool.py
fasm/parser/: __init__.py  antlr.py  textx.py
src/: CMakeLists.txt
tests/: test_simple.py
